JumpScript/tests/baselines/reference/parserSkippedTokens8.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens8.jump(2,9): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens8.jump (1 errors) ====
    ;
    /*foo*/ \ /*bar*/
            
!!! error TS1127: Invalid character.